--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.11.0",
     "mongoose": "^8.7.1",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7"
   }
 }
